--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "homework-six",
+  "name": "homework-seven",
   "version": "1.0.0",
-  "description": "This is my homework 6 repo for N215.",
+  "description": "This is my homework 7 repo for N215.",
   "main": "index.js",
   "scripts": {
     "compile": "sass scss/styles.scss css/styles.css -w",
